gap between buttons and graph is fixed

--- a/app/styles/_line_graph_overwrite.scss
+++ b/app/styles/_line_graph_overwrite.scss
@@ -323,6 +323,8 @@
 			}
 			.notes{
 				padding-right:7px;
+
+	
 			}
 		}
 	}
@@ -330,6 +332,7 @@
 		clear: left;
 	    display: inline-block;
 	    margin: 380px 0px 20px;
+	    margin: 0px 0px 20px;
 	    width: 100%;
 	    .dropdown-menu{
 	    	margin-bottom: 80px;
